<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartActivity">

    <TextView
        android:text="@string/hello_world_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="56dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_english"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:onClick="onButtonClick" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/edit_read_text" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_german"
            android:id="@+id/radioButton"
            android:layout_below="@+id/editText"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:onClick="onRadioClick"
            android:enabled="true"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_english"
            android:id="@+id/radioButton2"
            android:layout_below="@+id/radioButton"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:onClick="onRadioClick" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_read"
        android:id="@+id/button2"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:onClick="onReadButtonClick"
        android:background="@drawable/button_custom"/>

</RelativeLayout>
